Fixes header alignment. fixes image responsiveness on fights access section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,11 @@ h3 {
   transition: all 0.5s;
 }
 
+nav { 
+
+  right: 10%;
+  position: absolute;
+}
 #header.header-scrolled {
   background: rgba(25, 28, 31, 0.8);
   height: 60px;
@@ -1191,14 +1196,19 @@ text-align: center;
 .row-about { 
   padding-top: 10%;
   padding-bottom: 10%;
-  background: url("../img/asset-1.png") top center no-repeat;
+  background: url("../img/MMAGlobal_R2_Sec3_FAC_992x272.jpg") top center no-repeat;
   background-size: cover;
+}
+@media (max-width: 992px) { 
+  .row-about { 
+  background-size: contain;
+  }
 }
 
 @media (max-width: 768px) { 
   .row-about { 
-    background: url("../img/asset-1-mobile.png") top center no-repeat;
-    background-size: contain;
+    background: url("../img/MMAGlobal_R2_Sec3_FAC2_540x584.jpg") top center no-repeat;
+    background-size: cover;
   }
   .boxes { 
     margin-top: 7em !important;
